--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,13 @@ button {
   cursor: pointer;
 }
 
+
 .work-time {
+  color: green;
+  text-shadow: 0px 0px 5px black;
+}
+
+.break-time {
   color: green;
   text-shadow: 0px 0px 5px black;
 }
