--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,7 @@ body{
   // background-attachment:fixed;
   // background-position:center;
   // background-size:cover;
-  
+
   background-color:#585360;
   text-align:center;
 }
@@ -20,13 +20,13 @@ font-family:"VT323",sans-serif;
     vertical-align:middle;
     background-color:rgba(0,0,0,0.4);
   }
-  
+
   .timeInMinutes{
-    
+
     font-size:3em;
     vertical-align:middle;
   }
-  
+
 }
 
 .container{
@@ -55,7 +55,7 @@ font-family:"VT323",sans-serif;
     border-radius:4px;
     font-family:"Orbitron",sans-serif;
     font-size:2em;
-   
+
   }
   // box-shadow:0px 0px 10px rgba(0,0,0,0.4)
 }
@@ -72,9 +72,16 @@ button{
      cursor:pointer;
     }
 
+$current-time:0px 0px 5px black
+
 .work-time{
   color:green;
-  text-shadow:0px 0px 5px black;
+  text-shadow:$current-time;
+}
+
+.break-time{
+  color:red;
+  text-shadow: $current-time;
 }
 
 .disabled{
